kubernetes/kubernetes-istio/k8s/base/web-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-internal
  labels:
    app: web-internal
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: web-internal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-internal
  labels:
    app: web-internal
spec:
  selector:
    matchLabels:
      app: web-internal
  template:
    metadata:
      labels:
        app: web-internal
        type: internal
    spec:
      serviceAccountName: web-internal
      containers:
        - name: nginx-sample
          image: chunleng/nginx-sample
          ports:
            - containerPort: 80
